<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragment.ServiceListFragment">

     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="@dimen/_40sdp">

          <TextView
              android:id="@+id/titleTextView"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:text="@string/servicelise_title"
              android:textSize="@dimen/_50ssp"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toTopOf="parent" />

          <Button
              android:id="@+id/mapsBtn"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/maps_title"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/titleTextView" />
          <Button
              android:id="@+id/backBtn"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/back_title"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/mapsBtn" />


     </androidx.constraintlayout.widget.ConstraintLayout>

</layout>